# psd

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Changelog.MD  Dockerfile  Downloads.MD  LICENSE  Makefile.am  README.MD  Readme.MD  TODO.MD  ToDo.MD  configure.ac
data/: Makefile.am  Makefile1
data/meshes/: Makefile.am
data/meshes/2D/Geo-Files/: Makefile.am  Notched-Plate.geo  asymmetric-three-point-bending-n.geo  asymmetric-three-point-bending.geo  bar-dynamic.geo  bar-dynamic.msh  bar-dynamic.py  bar.py  city.geo  quater_cylinder.geo  soil-dc.geo  soil.geo  square.geo  tensile-crack.geo
data/meshes/3D/Geo-Files/: L-shape.geo  L_shape.geo  Makefile.am  bar.geo  bar.py  bar_dynamic.geo  cube.geo  cube.msh  quasistatic.geo  soil.geo  tensile-crack.geo  tensile_crack.geo
ext/: .gitignore  FreeFEM.patch  Makefile.am
src/plugins/: Makefile.am  gofastplugins.cpp
src/plugins/go-fast-plugins/cpp/: Makefile.am  gofastplugins.cpp
src/plugins/go-fast-plugins/lib/: EnergySplit.hpp
src/plugins/go-fast-plugins/test/: Makefile.am  Readme.md  Test_1.edp  Test_2.edp  Test_3.edp
src/plugins/medio/: Makefile.am
src/plugins/medio/cpp/: Makefile.am  medio.cpp  medio.hpp  medioGetGroupLabel.hpp  medioLoadMedMesh.hpp  medioSaveMedMesh.hpp
src/plugins/medio/test/: Makefile.am  MedCoupling_Test.cpp  Test_1.edp  Test_2.edp  mcUT1.hpp  mcUT2.hpp  mcUT3.hpp  mcUT4.hpp  mcUT5.hpp  mcUT6.hpp  mcUT7.hpp
src/plugins/mfront/: Makefile.am
src/plugins/mfront/cpp/: .gitignore  Makefile.am  PsdMfrontHandler.hpp  PsdMfrontHandlerDm.hpp  PsdMfrontPrintBehaviourStats.hpp  mfront.cpp  mfrontElasticityHandler.hpp  typedefinitions.hxx
src/plugins/mfront/law/: .gitignore  HelloWorld.mfront  Hujeux.mfront  HujeuxECP1985.mfront  IsotropicLinearHardeningPlasticity.mfront  Iwan-20NoS.mfront  Iwan.mfront  Makefile.am  TFEL_MatrixFunc.hxx  desmorat20152d.mfront  desmorat3Dnonlocal.mfront  desmoratplanestress.mfront  desmoratplanestressDelta.mfront
src/plugins/mfront/test/: Makefile.am  Readme.md  Test_1.edp  Test_2.edp  Test_2_desmorat.edp  Test_3.edp  Test_3_desmorat.edp  Test_4.edp  Test_5.edp  Test_6.edp  Test_6_increment.edp  Test_7.edp  Test_8.edp  Test_PrintStats.edp
src/plugins/paraview-output/: Makefile.am
src/plugins/paraview-output/cpp/: Makefile.am  PSD-iovtk.cpp  iovtk.cpp
src/plugins/paraview-output/test/: Makefile.am  Readme.md  Test_1.edp  Test_2.edp  Test_3.edp
src/plugins/pdmt/test/: Makefile.am
src/plugins/petsc/: Makefile.am  common_hpddm.hpp
src/plugins/petsc/cpp/: Makefile.am  common_hpddm.hpp
src/plugins/soil-laws/: Makefile.am
src/plugins/soil-laws/cpp/: Makefile.am  soil-laws.cpp
src/plugins/soil-laws/hujeux-law-lib/: .gitignore  Hujeuxparam.input  Makefile.am  cpplapack.h  druckerparam.input  druckerprager.cpp  druckerprager.h  hujeux.cpp  hujeux.h  mat_tools.cpp  stdafx.h  test.cpp  test_mat_tools.cpp  utils.cpp  utils.h
src/plugins/soil-laws/test/: .gitignore  Hujeuxparam.input  Makefile.am  Readme.md  Test_1.edp  Test_2.edp
src/plugins/sparsity-visualizer/cpp/: Makefile.am  MatrixPlotter.cpp
src/plugins/sparsity-visualizer/lib/: gnuCommands.hpp
src/plugins/sparsity-visualizer/test/: .gitignore  Makefile.am  Readme.md  (+2 more)
src/plugins/top-ii-vol/: Makefile.am
src/psd-preprocessor/: .gitignore  ControlParameters.hpp  DetectWrongArgument.hpp  ErrorWrongArgument.hpp  FemParameters.hpp  HeaderMacro.hpp  Help.hpp  LinearFormBuilderAndSolver.hpp  LinearFormBuilderAndSolver_DamageMechanics.hpp  LinearFormBuilderAndSolver_Dynamics.hpp  LinearFormBuilderAndSolver_ElastoDynamics.hpp  LinearFormBuilderAndSolver_ElastoPlastic.hpp  LinearFormBuilderAndSolver_LinearElasticity.hpp  LinearFormBuilderAndSolver_SoilDynamics.hpp  Macros.hpp  Main.hpp  Makefile.am  Mesh.hpp  MeshAndFeSpace.hpp  OtherParameters.hpp  PSD_PreProcess.cpp  PostProcessor.hpp  VariationalFormulation.hpp  VariationalFormulation_DamageMechanics.hpp  VariationalFormulation_ElastoDynamics.hpp  VariationalFormulation_ElastoPlastic.hpp  VariationalFormulation_LinearElasticity.hpp  VariationalFormulation_SoilDynamics.hpp
src/psd-preprocessor/ControlParameters/: DamageMechanics.hpp  ElastoDynamics.hpp  ElastoPlastic.hpp  LinearElasticity.hpp  SoilDynamics.hpp  poisson.hpp
src/psd-preprocessor/FemParameters/: DamageMechanics.hpp  ElastoDynamics.hpp  ElastoPlastic.hpp  LinearElasticity.hpp  SoilDynamics.hpp  poisson.hpp
src/psd-preprocessor/LinearFormBuilderAndSolver/: DamageMechanics.hpp  ElastoDynamics.hpp  ElastoPlastic.hpp  LinearElasticity.hpp  SoilDynamics.hpp  poisson.hpp
src/psd-preprocessor/Macros/: DamageMechanics.hpp  ElastoDynamics.hpp  ElastoPlastic.hpp  LinearElasticity.hpp  SoilDynamics.hpp  common.hpp  poisson.hpp
src/psd-preprocessor/MeshAndFeSpace/: DamageMechanics.hpp  ElastoDynamics.hpp  ElastoPlastic.hpp  LinearElasticity.hpp  SoilDynamics.hpp  poisson.hpp
src/psd-preprocessor/OtherParameters/: DamageMechanics.hpp  ElastoDynamics.hpp  ElastoPlastic.hpp  LinearElasticity.hpp  SoilDynamics.hpp  common.hpp  poisson.hpp
src/psd-preprocessor/Validation/: Iwan.hpp
src/psd-preprocessor/VariationalFormulation/: DamageMechanics.hpp  ElastoDynamics.hpp  ElastoPlastic.hpp  LinearElasticity.hpp  SoilDynamics.hpp  poisson.hpp
src/psd-solve/: .gitignore  Makefile.am  PSD_Solve_Seq
test/elasto-plastic/: Makefile.am
test/elastodynamics/: Makefile.am
test/fracture-mechanics/: Makefile.am
test/linear-elasticity/: Makefile.am
test/load/: .gitignore  Hujeuxparam.input  Makefile.am  MatrixPlotter.edp  gofastplugins.edp  gofastplugins_GFPeigen.edp  gofastplugins_GFPeigenAlone.edp  iovtk-parallel.edp  iovtk.edp  mfront.edp  soil-law.edp  soil-laws.edp  soil-laws_hujeux.edp  top-ii-vol.edp  top-ii-vol_partitioning.edp  top-ii-vol_partitioningAndMeshing.edp  top-ii-vol_partitioningAndMeshingAndReconstruction.edp  top-ii-vol_partitioningAndMeshingAndReconstructionX.edp  top-ii-vol_partitioningAndMeshingAndReconstructionY.edp  top-ii-vol_partitioningAndMeshingAndReconstructionZ.edp
test/poisson/: Makefile.am
test/soildynamics/: .gitignore  Makefile.am
(+378 files in other folders)
